software/arm_ros2_ws/log/build_2026-06-30_00-35-18/stm32_bridge/stderr.log
/usr/local/lib/python3.8/dist-packages/setuptools/dist.py:717: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  warnings.warn(
  File "/home/bg99/Documents/Projects/robot-arm/software/arm_ros2_ws/install/stm32_bridge/lib/python3.8/site-packages/stm32_bridge/protocol.py", line 56
    self.read_state = self.WaitChecksum
    ^
SyntaxError: invalid syntax

